# Adios

./: README.md
Aiolos/: CMakeLists.txt  README.md  build.bash
Aiolos/app/: CMakeLists.txt  main.cpp
Aiolos/include/: aiolos.hpp  classify.hpp  cluster.hpp  common.hpp  io_helper.hpp  regression.hpp  task_factory.hpp
Aiolos/include/bayes/: naive_bayes.hpp
Aiolos/include/boost/: adaboost.hpp
Aiolos/include/kmeans/: kmeans.hpp  kmeans_base_solver.hpp  kmeans_bin_solver.hpp  kmeans_solver.hpp
Aiolos/include/knn/: knn.hpp
Aiolos/include/linear_regression/: linear_regression.hpp  locally_weighted.hpp
Aiolos/include/logistic/: logistic.hpp
Aiolos/include/nn/: fc_layer.hpp  input_layer.hpp  layer.hpp  nn.hpp  output_layer.hpp
Aiolos/include/random_forest/: rf.hpp
Aiolos/include/svm/: def.hpp  smo.hpp  smo_platt.hpp  smo_simple.hpp  svm.hpp
Aiolos/include/trees/: cart_model_tree_impl.hpp  cart_tree.hpp  classify_tree.hpp  model_tree.hpp  tree_struct.hpp
Aiolos/include/util/: aiolos_math.hpp  io.hpp  matrix_args.hpp  op.hpp  optimize.hpp
Aiolos/python-package/: CMakeLists.txt  aiolos.cpp  aiolos.hpp
Aiolos/src/: CMakeLists.txt  adaboost.cpp  aiolos.cpp  cart_tree.cpp  classify_tree.cpp  fc_layer.cpp  input_layer.cpp  io_helper.cpp  kmeans.cpp  kmeans_base_solver.cpp  kmeans_bin_solver.cpp  knn.cpp  linear_regression.cpp  locally_weighted.cpp  logistic.cpp  model_tree.cpp  naive_bayes.cpp  nn.cpp  op.cpp  rf.cpp  smo_platt.cpp  smo_simple.cpp  svm.cpp  svm_def.cpp
Aiolos/src/aiolos/: aiolos.cpp
Aiolos/src/knn/: knn.cpp
Aiolos/src/nn/: nn.cpp  output_layer.cpp
Aiolos/src/random_forest/: rf.cpp
Aiolos/src/svm/: smo_platt.cpp  smo_simple.cpp
Aiolos/src/trees/: cart_tree.cpp  classify_tree.cpp
Aiolos/src/util/: op.cpp
(+302 files in other folders)
