project(AIOLOS)
cmake_minimum_required(VERSION 2.8.0 FATAL_ERROR)
SET(AIOLOS_HEADER_DIR ${PROJECT_SOURCE_DIR}/include)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 -std=c++11")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(app)
