project(Aiolos)
cmake_minimum_required(VERSION 2.8.0 FATAL_ERROR)
set(CMAKE_MACOSX_RPATH 1)
include_directories(../include /Users/wzp/workspace/wzp_cpp_lib /usr/include/python2.7)
aux_source_directory(../src SRC_LIST)
list(REMOVE_ITEM SRC_LIST "../src/aiolos.cpp" "../src/main.cpp")
add_library(aiolos SHARED ./aiolos.cpp ${SRC_LIST})
target_link_libraries(aiolos python2.7 boost_python-mt)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 -std=c++11 -fPIC")
set_property(TARGET aiolos PROPERTY PREFIX "lib")
set_property(TARGET aiolos PROPERTY OUTPUT_NAME "aiolos.so")
set_property(TARGET aiolos PROPERTY SUFFIX "")