include_directories(${AIOLOS_HEADER_DIR} /Users/wzp/workspace/wzp_cpp_lib)
aux_source_directory(./aiolos SRC_LIST)
aux_source_directory(./bayes SRC_LIST)
aux_source_directory(./boost SRC_LIST)
aux_source_directory(./kmeans SRC_LIST)
aux_source_directory(./knn SRC_LIST)
aux_source_directory(./linear_regression SRC_LIST)
aux_source_directory(./logistic SRC_LIST)
aux_source_directory(./nn SRC_LIST)
aux_source_directory(./random_forest SRC_LIST)
aux_source_directory(./svm SRC_LIST)
aux_source_directory(./trees SRC_LIST)
aux_source_directory(./util SRC_LIST)
add_library(aiolos SHARED ${SRC_LIST})
